--- a/client/package.json
+++ b/client/package.json
@@ -7,16 +7,21 @@
     "babel-loader": "^6.2.10",
     "babel-preset-es2016": "^6.16.0",
     "babel-preset-react": "^6.16.0",
+    "react-hot-loader": "^1.3.1",
     "react-scripts": "0.8.5",
     "webpack": "^1.14.0",
     "webpack-dev-server": "^1.16.2"
   },
   "dependencies": {
+    "immutable": "^3.8.1",
     "react": "^15.4.2",
     "react-dom": "^15.4.2"
   },
   "babel": {
-    "presets": ["es2016", "react"]
+    "presets": [
+      "es2016",
+      "react"
+    ]
   },
   "scripts": {
     "start": "react-scripts start",
