--- a/client/package.json
+++ b/client/package.json
@@ -1,32 +1,72 @@
 {
-  "name": "client",
-  "version": "0.1.0",
-  "private": true,
+  "name": "minimal-electron-boilerplate",
+  "productName": "ElectronReact",
+  "version": "0.10.0",
+  "description": "Electron application boilerplate based on React, React Router, Webpack, React Hot Loader for rapid application development",
+  "main": "main.js",
+  "scripts": {
+    "hot-server": "cross-env NODE_ENV=development node --max_old_space_size=2096 -r babel-register server.js",
+    "start": "cross-env NODE_ENV=production electron ./app/",
+    "start-hot": "cross-env HOT=1 NODE_ENV=development electron -r babel-register -r babel-polyfill ./app/main.development",
+    "dev": "npm run hot-server -- --start-hot"
+  },
+  "bin": {
+    "electron": "./node_modules/.bin/electron"
+  },
   "devDependencies": {
     "babel-core": "^6.21.0",
     "babel-loader": "^6.2.10",
-    "babel-preset-es2015": "^6.18.0",
+    "babel-plugin-add-module-exports": "^0.2.1",
+    "babel-plugin-dev-expression": "^0.2.1",
+    "babel-plugin-tcomb": "^0.3.24",
+    "babel-plugin-transform-class-properties": "^6.19.0",
+    "babel-plugin-transform-es2015-classes": "^6.18.0",
+    "babel-plugin-webpack-loaders": "^0.8.0",
+    "babel-polyfill": "^6.20.0",
+    "babel-preset-env": "^1.1.8",
     "babel-preset-react": "^6.16.0",
-    "react-hot-loader": "^1.3.1",
-    "react-scripts": "0.8.5",
+    "babel-preset-react-hmre": "^1.1.1",
+    "babel-preset-react-optimize": "^1.0.1",
+    "babel-preset-stage-0": "^6.16.0",
+    "babel-register": "^6.18.0",
+    "babili-webpack-plugin": "^0.0.7",
+    "boiler-room-custodian": "^0.5.0",
+    "concurrently": "^3.1.0",
+    "cross-env": "^3.1.4",
+    "css-loader": "^0.26.1",
+    "devtron": "^1.4.0",
+    "electron": "^1.4.14",
+    "electron-builder": "^11.2.5",
+    "electron-devtools-installer": "^2.0.1",
+    "express": "^4.14.0",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "file-loader": "^0.9.0",
+    "html-webpack-plugin": "^2.26.0",
+    "jsdom": "^9.9.1",
+    "json-loader": "^0.5.4",
+    "react-addons-test-utils": "^15.4.2",
+    "redux-logger": "^2.7.4",
+    "style-loader": "^0.13.1",
+    "url-loader": "^0.5.7",
     "webpack": "^1.14.0",
-    "webpack-dev-server": "^1.16.2"
+    "webpack-dev-middleware": "^1.9.0",
+    "webpack-hot-middleware": "^2.15.0",
+    "webpack-merge": "^2.4.0",
+    "webpack-validator": "^2.3.0"
   },
   "dependencies": {
-    "immutable": "^3.8.1",
+    "electron-debug": "^1.1.0",
+    "font-awesome": "^4.7.0",
     "react": "^15.4.2",
-    "react-dom": "^15.4.2"
+    "react-dom": "^15.4.2",
+    "react-redux": "^5.0.2",
+    "react-router": "^3.0.1",
+    "react-router-redux": "^4.0.7",
+    "redux": "^3.6.0",
+    "redux-thunk": "^2.1.0"
   },
-  "babel": {
-    "presets": [
-      "es2015",
-      "react"
-    ]
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+  "devEngines": {
+    "node": ">=6.x",
+    "npm": ">=3.x"
   }
 }
