--- a/client/package.json
+++ b/client/package.json
@@ -42,6 +42,7 @@
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.9.0",
     "html-webpack-plugin": "^2.26.0",
+    "immutable": "^3.8.1",
     "jsdom": "^9.9.1",
     "json-loader": "^0.5.4",
     "react-addons-test-utils": "^15.4.2",
@@ -57,6 +58,7 @@
   "dependencies": {
     "electron-debug": "^1.1.0",
     "font-awesome": "^4.7.0",
+    "immutable": "^3.8.1",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.2",
