--- a/client/package.json
+++ b/client/package.json
@@ -1,74 +1,33 @@
 {
-  "name": "focus",
-  "productName": "focus",
-  "version": "0.10.0",
-  "description": "",
+  "name": "my-electron-app",
+  "version": "0.1.0",
   "main": "main.js",
-  "scripts": {
-    "hot-server": "cross-env NODE_ENV=development node --max_old_space_size=2096 -r babel-register server.js",
-    "start": "cross-env NODE_ENV=production electron ./app/",
-    "start-hot": "cross-env HOT=1 NODE_ENV=development electron -r babel-register -r babel-polyfill ./app/main.development",
-    "dev": "npm run hot-server -- --start-hot"
-  },
-  "bin": {
-    "electron": "./node_modules/.bin/electron"
-  },
   "devDependencies": {
-    "babel-core": "^6.21.0",
-    "babel-loader": "^6.2.10",
-    "babel-plugin-add-module-exports": "^0.2.1",
-    "babel-plugin-dev-expression": "^0.2.1",
-    "babel-plugin-tcomb": "^0.3.24",
-    "babel-plugin-transform-class-properties": "^6.19.0",
-    "babel-plugin-transform-es2015-classes": "^6.18.0",
-    "babel-plugin-webpack-loaders": "^0.8.0",
-    "babel-polyfill": "^6.20.0",
-    "babel-preset-env": "^1.1.8",
-    "babel-preset-react": "^6.16.0",
-    "babel-preset-react-hmre": "^1.1.1",
-    "babel-preset-react-optimize": "^1.0.1",
-    "babel-preset-stage-0": "^6.16.0",
-    "babel-register": "^6.18.0",
-    "babili-webpack-plugin": "^0.0.7",
-    "boiler-room-custodian": "^0.5.0",
-    "concurrently": "^3.1.0",
-    "cross-env": "^3.1.4",
-    "css-loader": "^0.26.1",
-    "devtron": "^1.4.0",
-    "electron": "^1.4.14",
-    "electron-builder": "^11.2.5",
-    "electron-devtools-installer": "^2.0.1",
-    "express": "^4.14.0",
-    "extract-text-webpack-plugin": "^1.0.1",
-    "file-loader": "^0.9.0",
-    "html-webpack-plugin": "^2.26.0",
+    "babel-core": "^6.7.2",
+    "babel-loader": "^6.2.4",
+    "babel-preset-es2015": "^6.3.13",
+    "babel-preset-react": "^6.3.13",
+    "css-loader": "^0.23.1",
+    "electron-packager": "^5.2.1",
+    "electron-rebuild": "^1.1.3",
     "immutable": "^3.8.1",
-    "jsdom": "^9.9.1",
-    "json-loader": "^0.5.4",
-    "react-addons-test-utils": "^15.4.2",
-    "redux-logger": "^2.7.4",
-    "style-loader": "^0.13.1",
-    "url-loader": "^0.5.7",
-    "webpack": "^1.14.0",
-    "webpack-dev-middleware": "^1.9.0",
-    "webpack-hot-middleware": "^2.15.0",
-    "webpack-merge": "^2.4.0",
-    "webpack-validator": "^2.3.0"
+    "less": "^2.6.1",
+    "less-loader": "^2.2.2",
+    "node-libs-browser": "^1.0.0",
+    "react-redux": "^5.0.2",
+    "redux": "^3.6.0",
+    "style-loader": "^0.13.0",
+    "webpack": "^1.12.14",
+    "webpack-dev-server": "^1.14.1"
+  },
+  "scripts": {
+    "start": "./node_modules/electron-prebuilt/dist/Electron.app/Contents/MacOS/Electron .",
+    "watch": "./node_modules/.bin/webpack-dev-server",
+    "electron-rebuild": "./node_modules/.bin/electron-rebuild"
   },
   "dependencies": {
-    "electron-debug": "^1.1.0",
-    "font-awesome": "^4.7.0",
-    "immutable": "^3.8.1",
-    "react": "^15.4.2",
-    "react-dom": "^15.4.2",
-    "react-redux": "^5.0.2",
-    "react-router": "^3.0.1",
-    "react-router-redux": "^4.0.7",
-    "redux": "^3.6.0",
-    "redux-thunk": "^2.1.0"
-  },
-  "devEngines": {
-    "node": ">=6.x",
-    "npm": ">=3.x"
+    "electron-prebuilt": "^0.37.2",
+    "react": "^0.14.7",
+    "react-dom": "^0.14.3"
   }
 }
