--- a/client/package.json
+++ b/client/package.json
@@ -7,18 +7,17 @@
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
-    "css-loader": "^0.23.1",
-    "electron-packager": "^5.2.1",
-    "electron-rebuild": "^1.1.3",
+    "css-loader": "^0.26.2",
+    "electron-packager": "^8.5.2",
     "immutable": "^3.8.1",
     "less": "^2.6.1",
     "less-loader": "^2.2.2",
-    "node-libs-browser": "^1.0.0",
+    "node-libs-browser": "^2.0.0",
     "react-redux": "^5.0.2",
     "redux": "^3.6.0",
     "style-loader": "^0.13.0",
-    "webpack": "^1.12.14",
-    "webpack-dev-server": "^1.14.1"
+    "webpack": "^2.2.1",
+    "webpack-dev-server": "^2.4.1"
   },
   "scripts": {
     "start": "./node_modules/electron-prebuilt/dist/Electron.app/Contents/MacOS/Electron .",
@@ -26,8 +25,8 @@
     "electron-rebuild": "./node_modules/.bin/electron-rebuild"
   },
   "dependencies": {
-    "electron-prebuilt": "^0.37.2",
-    "react": "^0.14.7",
-    "react-dom": "^0.14.3"
+    "electron": "^1.6.1",
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2"
   }
 }
