Actions now firing properly, but reducer not reacting

--- a/client/package.json
+++ b/client/package.json
@@ -7,31 +7,30 @@
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
+    "chai": "^3.5.0",
+    "chai-immutable": "^1.6.0",
     "css-loader": "^0.26.2",
     "electron-packager": "^8.5.2",
-    "immutable": "^3.8.1",
     "less": "^2.6.1",
     "less-loader": "^2.2.2",
+    "mocha": "^3.2.0",
     "node-libs-browser": "^2.0.0",
     "react-redux": "^5.0.2",
     "redux": "^3.6.0",
     "style-loader": "^0.13.0",
     "webpack": "^2.2.1",
-    "webpack-dev-server": "^2.4.1",
-    "chai": "^3.5.0",
-    "chai-immutable": "^1.6.0",
-    "mocha": "^3.2.0"
+    "webpack-dev-server": "^2.4.1"
   },
   "dependencies": {
     "electron": "^1.6.1",
+    "immutable": "^3.8.1",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
-    "immutable": "^3.8.1",
     "request": "^2.79.0",
     "request-promise": "^4.1.1"
   },
   "scripts": {
-    "start": "./node_modules/electron-prebuilt/dist/Electron.app/Contents/MacOS/Electron .",
+    "start": "./node_modules/.bin/electron .",
     "watch": "./node_modules/.bin/webpack-dev-server",
     "electron-rebuild": "./node_modules/.bin/electron-rebuild",
     "test": "mocha --compilers js:babel-core/register --require ./test/test_helper.js --recursive",
