--- a/client/package.json
+++ b/client/package.json
@@ -15,10 +15,6 @@
     "less-loader": "^2.2.2",
     "mocha": "^3.2.0",
     "node-libs-browser": "^2.0.0",
-    "react-redux": "^5.0.2",
-    "redux": "^3.6.0",
-    "style-loader": "^0.13.0",
-    "webpack": "^2.2.1",
     "webpack-dev-server": "^2.4.1"
   },
   "dependencies": {
@@ -26,8 +22,13 @@
     "immutable": "^3.8.1",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
+    "redux-thunk": "^2.2.0",
     "request": "^2.79.0",
-    "request-promise": "^4.1.1"
+    "request-promise": "^4.1.1",
+    "react-redux": "^5.0.2",
+    "redux": "^3.6.0",
+    "style-loader": "^0.13.0",
+    "webpack": "^2.2.1"
   },
   "scripts": {
     "start": "./node_modules/.bin/electron .",
