--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "chai-immutable": "^1.6.0",
     "css-loader": "^0.26.2",
     "electron-packager": "^8.5.2",
+    "file-loader": "^0.11.2",
     "less": "^2.6.1",
     "less-loader": "^2.2.2",
     "mocha": "^3.2.0",
