--- a/client/package.json
+++ b/client/package.json
@@ -25,12 +25,13 @@
     "immutable": "^3.8.1",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
+    "react-redux": "^5.0.2",
+    "redux": "^3.6.0",
     "redux-thunk": "^2.2.0",
     "request": "^2.79.0",
     "request-promise": "^4.1.1",
-    "react-redux": "^5.0.2",
-    "redux": "^3.6.0",
     "style-loader": "^0.13.0",
+    "sudo-prompt": "^7.1.1",
     "webpack": "^2.2.1"
   },
   "scripts": {
